tests/interp/bad/exists-2.ngc
(Expected ] reading bracketed parameter)
G0 X EXISTS[#1+#2]
M2
